--- a/src/style.scss
+++ b/src/style.scss
@@ -1,52 +1,154 @@
-.form-container{
-    background-color: #9D5C63;
-    height: 100vh;
+.form-container {
+  background-color: #9d5c63;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .form-wrapper {
+    background-color: #725473;
+    padding: 20px 60px;
+    border-radius: 10px;
     display: flex;
+    gap: 10px;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
-    .form-wrapper{
-        background-color: #CAC4CE;
-        padding: 20px 60px;
-        border-radius: 10px;
-        display: flex;
-        gap: 10px;
-        flex-direction: column;
-        align-items: center;
-        .brand{
-            color:#9D5C63;
-            font-weight: bold;
-            font-style: italic;
-            font-size: 24px;
-        }
-
-        .title{
-            color: #9D5C63;
-            font-size: 14px;
-        }
-
-        form{
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            input{
-                padding: 15px;
-                border: 2px solid #9D5C63;
-                width: 300px;
-                &::placeholder{
-                    color: rgb(175, 175, 175)
-                }
-            }
-            button{
-                background-color: #9D5C63;
-               color: white; 
-               padding: 10px;
-               font-weight: bold;
-               border: none;
-            }
-        }
-        p{
-           margin-top: 10px; 
-        }
+    .brand {
+      color: #9d5c63;
+      font-weight: bold;
+      font-style: italic;
+      font-size: 24px;
     }
+
+    .title {
+      color: #9d5c63;
+      font-size: 14px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      input {
+        padding: 15px;
+        border: 2px solid #9d5c63;
+        width: 300px;
+        &::placeholder {
+          color: rgb(175, 175, 175);
+        }
+      }
+      button {
+        background-color: #9d5c63;
+        color: white;
+        padding: 10px;
+        font-weight: bold;
+        border: none;
+      }
+    }
+    p {
+      margin-top: 10px;
+    }
+  }
+}
+.home {
+  background-color: #9d5c63;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .home-container {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
+    display: flex;
+    overflow: hidden;
+  }
+  .sidebar {
+    flex: 3;
+    border-right: 1px solid white;
+    background-color: #575170;
+    color: #ffe3e7;
+    .navbar {
+      background-color: #3f4e66;
+      display: flex;
+      align-items: center;
+      height: 50px;
+      padding: 10px;
+      justify-content: space-between;
+      .brand {
+        color: #ffe3e7;
+        font-weight: bold;
+        font-style: italic;
+        font-size: 24px;
+      }
+      .user {
+        display: flex;
+        img {
+          background-color: white;
+          height: 36px;
+          width: 36px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        button {
+          background-color: #8a566e;
+          color: #ffe3e7;
+          border: none;
+          cursor: pointer;
+        }
+      }
+    }
+    .search {
+      border-bottom: 1px solid white;
+      .search-form {
+        input {
+          background-color: transparent;
+          border-bottom: 1px solid white;
+          border: none;
+          color: white;
+          outline: none;
+          &::placeholder {
+            color: lightgrey;
+          }
+        }
+      }
+      .user-chat {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #2f2d52;
+        }
+
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        .user-chat-info {
+          span {
+            font-size: 18px;
+            font-weight: 500;
+          }
+          p {
+            font-size: 14px;
+            color: lightgray;
+          }
+        }
+      }
+    }
+  }
+  .chat {
+    flex: 5;
+    background-color: #725473;
+    color: #ffe3e7;
+  }
 }
