--- a/src/style.scss
+++ b/src/style.scss
@@ -63,54 +63,54 @@
     height: 80%;
     display: flex;
     overflow: hidden;
-  }
-  .sidebar {
-    flex: 3;
-    border-right: 1px solid white;
-    background-color: #575170;
-    color: #ffe3e7;
-    .navbar {
-      background-color: #3f4e66;
-      display: flex;
-      align-items: center;
-      height: 50px;
-      padding: 10px;
-      justify-content: space-between;
-      .brand {
-        color: #ffe3e7;
-        font-weight: bold;
-        font-style: italic;
-        font-size: 24px;
-      }
-      .user {
+    .sidebar {
+      flex: 2;
+      border-right: 1px solid white;
+      background-color: #575170;
+      color: #ffe3e7;
+      .navbar {
+        background-color: #3f4e66;
         display: flex;
-        img {
-          background-color: white;
-          height: 36px;
-          width: 36px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-
-        button {
-          background-color: #8a566e;
+        align-items: center;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
+        .brand {
           color: #ffe3e7;
-          border: none;
-          cursor: pointer;
+          font-weight: bold;
+          font-style: italic;
+          font-size: 24px;
+        }
+        .user {
+          display: flex;
+          img {
+            background-color: white;
+            height: 36px;
+            width: 36px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          button {
+            background-color: #8a566e;
+            color: #ffe3e7;
+            border: none;
+            cursor: pointer;
+          }
         }
       }
-    }
-    .search {
-      border-bottom: 1px solid white;
-      .search-form {
-        input {
-          background-color: transparent;
-          border-bottom: 1px solid white;
-          border: none;
-          color: white;
-          outline: none;
-          &::placeholder {
-            color: lightgrey;
+      .search {
+        border-bottom: 1px solid white;
+        .search-form {
+          input {
+            background-color: transparent;
+            border-bottom: 1px solid white;
+            border: none;
+            color: white;
+            outline: none;
+            &::placeholder {
+              color: lightgrey;
+            }
           }
         }
       }
@@ -144,11 +144,61 @@
           }
         }
       }
+      .chats {
+        .user-chat {
+          padding: 10px;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          color: white;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #2f2d52;
+          }
+
+          img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          .user-chat-info {
+            span {
+              font-size: 18px;
+              font-weight: 500;
+            }
+            p {
+              font-size: 14px;
+              color: lightgray;
+            }
+          }
+        }
+      }
     }
-  }
-  .chat {
-    flex: 5;
-    background-color: #725473;
-    color: #ffe3e7;
+    .chat {
+      flex: 3;
+
+      .chat-info {
+        height: 50px;
+        background-color: #3f4e66;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        color: lightgray;
+      }
+
+      .chat-icons {
+        display: flex;
+        gap: 10px;
+
+        img {
+          height: 24px;
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
